Bug 1820290 - Make `nsIFrame` treat out-of-flow things as word separators r=emilio

Out-of-flow creates `nsPlaceholderFrame`, and `nsIFrame::PeekOffset` related
methods treat words can cross its boundaries.  However, it looks odd that a
sequence of content split by `nsPlaceholderFrame` is treated as a word.

Therefore, I think that `nsIFrame::IsLogicallyAtLineEdge` and
`nsIFrame::IsVisuallyAtLineEdge` should ignore placeholder to check whether the
frame is first/last of the line.

Additionally, I think that `nsIFrame::PeekOffsetForWord` should not allow
`nsIFrame::GetFrameFromDirection` to cross `nsPlaceholderFrame` boundaries
if it's already found some characters.

Differential Revision: https://phabricator.services.mozilla.com/D176250